# examples

./: README.md
case-studies/camera-to-vector-db/: README.md  pyproject.toml
case-studies/camera-to-vector-db/jobcontainer/: pyproject.toml
