[tool.poetry]
name = "Camera pre-processing to vector DB"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@expanso.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
google-cloud-storage = "^2.9.0"
google-api-core = "^2.12.0"
google-cloud-core = "^2.3.3"
openxlab = "^0.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
